--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div id="container" class="no-drag">
@@ -43,6 +43,6 @@
         </main>
     </div>
 
-    <script src="./main.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
