:truck: 파일 구조 변경

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/common/styles.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div id="container" class="no-drag">
@@ -20,7 +21,7 @@
 
         <main class="game" aria-label="게임 목록">
             <article class="game__wrapper rock-paper-scissors">
-                <a class="game__overlay" href="#" aria-label="가위 바위 보 게임: 컴퓨터와 가위 바위 보 대결을 해보세요."></a>
+                <a class="game__overlay" href="./game-rps.html" aria-label="가위 바위 보 게임: 컴퓨터와 가위 바위 보 대결을 해보세요."></a>
                 <figure class="game__image"></figure>
                 <h1 class="game__title">
                     가위 바위 보!
@@ -43,6 +44,6 @@
         </main>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
