--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/common/styles.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/common/styles.css">
 </head>
 <body>
     <div id="container" class="no-drag">
@@ -27,8 +27,7 @@
                     가위 바위 보!
                 </h1>
                 <p class="game__desc">
-                    컴퓨터와 가위 바위 보 대결을<br/>
-                    해보세요.
+                    컴퓨터와 가위 바위 보 대결을 해보세요.
                 </p>
             </article>
             <article class="game__wrapper preparing" aria-hidden="true">
