--- a/game-rps.html
+++ b/game-rps.html
@@ -15,22 +15,37 @@
 </head>
 <body>
     <div id="container" class="no-drag">
-        <div class="board">
-            <div class="board__menu">
-                <a href="./index.html" class="board__menu-home">
-                    <span class="sr-only">메인 페이지로 이동</span>
-                </a>
-                <div class="board__menu-timer">
-                    15
+        <header class="menu">
+            <nav class="menu__bar">
+                <div class="menu__bar-score">
+                    Best Score : <span id="max-score">300</span>
                 </div>
-            </div>
 
+                <ul class="menu__bar-list">
+                <li class="menu__bar-list-item">
+                    <a href="./index.html" class="menu__bar-list-item--button home-button">
+                        <span class="sr-only">메인 페이지로 이동</span>
+                    </a>
+                </li>
+                <li class="menu__bar-list-item">
+                    <button type="button" class="menu__bar-list-item--button stop-button">
+                        <span class="sr-only">게임 중지</span>
+                    </button>
+                </li>
+                </ul>
+            </nav>
+        </header>
+
+        <main class="board">
             <div class="board__score">
-                <p class="board__score-pc">
-                    Your Score : <span>100</span>
+                <p class="board__score-item pc">
+                    PC : <span id="score-pc">100</span>
                 </p>
-                <p class="board__score-player">
-                    PC Score : <span>100</span>
+                <span>
+                    VS
+                </span>
+                <p class="board__score-item player">
+                    Player : <span id="score-player">100</span>
                 </p>
             </div>
 
@@ -51,7 +66,7 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </main>
     </div>
 
     <script src="./js/game-rps.js"></script>
