:memo: default text 및 id명 수정

--- a/game-rps.html
+++ b/game-rps.html
@@ -18,7 +18,7 @@
         <header class="menu">
             <nav class="menu__bar">
                 <div class="menu__bar-score">
-                    Best Score : <span id="max-score">300</span>
+                    Best Score : <span id="best-score"></span>
                 </div>
 
                 <ul class="menu__bar-list">
@@ -39,18 +39,18 @@
         <main class="board">
             <div class="board__score">
                 <p class="board__score-item pc">
-                    PC : <span id="score-pc">100</span>
+                    PC : <span id="score-pc"></span>
                 </p>
                 <span>
                     VS
                 </span>
                 <p class="board__score-item player">
-                    Player : <span id="score-player">100</span>
+                    Player : <span id="score-player"></span>
                 </p>
             </div>
 
             <div class="board__item pc-item">
-                <div class="board__image pc-image"></div>
+                <div class="board__image" id="pc-image"></div>
             </div>
 
             <div class="board__item player-item">
