:memo: 컴퓨터 선택 값 출력을 위한 img 태그 추가 및 모달 타이틀 수정

--- a/game-rps.html
+++ b/game-rps.html
@@ -50,7 +50,9 @@
             </div>
 
             <div class="board__item pc-item">
-                <div class="board__image" id="pc-image"></div>
+                <figure>
+                    <img src="./resources/images/game-rps/scissors.png" alt="컴퓨터 선택: 가위" class="board__image" id="pc-image" />
+                </figure>
             </div>
 
             <div class="board__item player-item">
@@ -70,9 +72,8 @@
 
         <div class="modal modal__layer">
             <div class="modal__content">
-                <h1 class="modal__content-title">
-                    사용자 승리! 축하합니다
-                </h1>
+                <div class="modal__content-title">
+                </div>
         
                 <p class="modal__content-close">
                     <span id="time-remain"></span>초 뒤 자동으로 닫힙니다.
