:memo: 가위 바위 보 페이지에서 홈 버튼 클릭 시 index #game으로 이동하도록 수정

--- a/game-rps.html
+++ b/game-rps.html
@@ -17,21 +17,21 @@
     <div id="container" class="no-drag">
         <header class="menu">
             <nav class="menu__bar">
-                <div class="menu__bar-score">
-                    Best Score : <span id="best-score"></span>
-                </div>
+                <!-- <div class="menu__bar-score"> -->
+                    <!-- Best Score : <span id="best-score"></span> -->
+                <!-- </div> -->
 
                 <ul class="menu__bar-list">
                 <li class="menu__bar-list-item">
-                    <a href="./index.html" class="menu__bar-list-item--button home-button">
+                    <a href="./index.html#game" class="menu__bar-list-item--button" id="home-button">
                         <span class="sr-only">메인 페이지로 이동</span>
                     </a>
                 </li>
-                <li class="menu__bar-list-item">
-                    <button type="button" class="menu__bar-list-item--button stop-button">
+                <!-- <li class="menu__bar-list-item">
+                    <button type="button" class="menu__bar-list-item--button" id="stop-button">
                         <span class="sr-only">게임 중지</span>
                     </button>
-                </li>
+                </li> -->
                 </ul>
             </nav>
         </header>
