--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="intro__button" aria-hidden="true"></div>
         </header>
 
-        <main class="game" aria-label="게임 목록">
+        <main id="game" aria-label="게임 목록">
             <article class="game__wrapper rock-paper-scissors">
                 <a class="game__overlay" href="./game-rps.html" aria-label="가위 바위 보 게임: 컴퓨터와 가위 바위 보 대결을 해보세요."></a>
                 <figure class="game__image"></figure>
