:adhesive_bandage: img 폴더 분리에 따라 코드 수정

--- a/game-rps.html
+++ b/game-rps.html
@@ -51,7 +51,7 @@
 
             <div class="board__item pc-item">
                 <figure>
-                    <img src="./resources/images/game-rps/scissors.png" alt="컴퓨터 선택: 가위" class="board__image" id="pc-image" />
+                    <img src="./img/game-rps/scissors.png" alt="컴퓨터 선택: 가위" class="board__image" id="pc-image" />
                 </figure>
             </div>
 
