:memo: 남은 기회 표시를 위한 div 추가

--- a/game-rps.html
+++ b/game-rps.html
@@ -21,6 +21,10 @@
                     <!-- Best Score : <span id="best-score"></span> -->
                 <!-- </div> -->
 
+                <div class="menu__bar-life">
+                    ❤️<strong id="player-life"></strong>
+                </div>
+
                 <ul class="menu__bar-list">
                 <li class="menu__bar-list-item">
                     <a href="./index.html#game" class="menu__bar-list-item--button" id="home-button">
