:adhesive_bandage: pc, player의 점수를 span 태그에서 strong 태그로 변경

--- a/game-rps.html
+++ b/game-rps.html
@@ -43,13 +43,13 @@
         <main class="board">
             <div class="board__score">
                 <p class="board__score-item pc">
-                    PC : <span id="score-pc"></span>
+                    PC : <strong id="score-pc"></strong>
                 </p>
                 <span>
                     VS
                 </span>
                 <p class="board__score-item player">
-                    Player : <span id="score-player"></span>
+                    Player : <strong id="score-player"></strong>
                 </p>
             </div>
 
