:adhesive_bandage: 승리, 패배 시 모달창에 출력되던 ❤️ 이모지를 아이콘으로 변경

--- a/game-rps.html
+++ b/game-rps.html
@@ -22,7 +22,7 @@
                 <!-- </div> -->
 
                 <div class="menu__bar-life">
-                    ❤️<strong id="player-life"></strong>
+                    <strong id="player-life"></strong>
                 </div>
 
                 <ul class="menu__bar-list">
