:memo: 다른 색깔 찾기 게임 페이지로 이동하도록 내용 추가

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
                     컴퓨터와 가위 바위 보 대결을 해보세요.
                 </p>
             </article>
+
+            <article class="game__wrapper find-different-color" aria-hidden="true">
+                <a class="game__overlay" href="./game-fdc.html"></a>
+                <figure class="game__image"></figure>
+                <h1 class="game__title" lang="en">
+                    다른 색깔 찾기
+                </h1>
+                <p class="game__desc" lang="en">
+                    당신의 색깔 찾기 능력은?<br/>
+                </p>
+            </article>
+
             <article class="game__wrapper preparing" aria-hidden="true">
                 <a class="game__overlay" href="#"></a>
                 <figure class="game__image"></figure>
