:adhesive_bandage: class명 변경

--- a/game-fdc.html
+++ b/game-fdc.html
@@ -32,9 +32,8 @@
                 </nav>
             </header>
 
-            <main class="colors">
-                <div class="colors__game">
-
+            <main class="battle">
+                <div class="battle__board">
                 </div>
             </main>
         </div>
