:lipstick: 다른 색깔 찾기 페이지 메뉴 바 스타일 수정

--- a/game-fdc.html
+++ b/game-fdc.html
@@ -18,11 +18,16 @@
         <div class="board">
             <header class="menu">
                 <nav class="menu__nav">
-                    <div class="menu__nav-stage menu-show-state">
+                    <div class="menu-show-state menu__nav-stage">
                         <strong id="player-stage">3</strong>
                     </div>
-                    <div class="menu__nav-time menu-show-state">
+                    <div class="menu-show-state menu__nav-time">
                         <strong id="player-time">3</strong>
+                    </div>
+                    <div class="menu__nav-stop">
+                        <button type="button" class="menu__nav-stop--button" id="stop-button">
+                            <span class="sr-only">게임 종료</span>
+                        </button>
                     </div>
                     <div class="menu__nav-home">
                         <a href="./index.html#game" class="menu__nav-home--button" id="home-button">
