:adhesive_bandage: class명 변경

--- a/game-fdc.html
+++ b/game-fdc.html
@@ -37,13 +37,17 @@
                 </nav>
             </header>
 
-            <main class="battle">
-                <div class="battle__board">
+            <main class="game">
+                <div class="palette">
+                    <div class="palette-item hit"></div>
+                    <div class="palette-item miss"></div>
+                    <div class="palette-item miss"></div>
+                    <div class="palette-item miss"></div>
                 </div>
             </main>
         </div>
     </div>
 
-    <script src="./js/game-fds.js"></script>
+    <script src="./js/game-fdc.js"></script>
 </body>
 </html>
