--- a/game-rps.html
+++ b/game-rps.html
@@ -34,25 +34,25 @@
                 </nav>
             </header>
 
-            <main class="battle">
-                <div class="battle__board">
-                    <div class="battle__score">
-                        <p class="battle__score-item pc">
+            <main class="game">
+                <div class="game__board">
+                    <div class="game__score">
+                        <p class="game__score-item pc">
                             PC : <strong id="score-pc"></strong>
                         </p>
                         <span>
                             VS
                         </span>
-                        <p class="battle__score-item player">
+                        <p class="game__score-item player">
                             Player : <strong id="score-player"></strong>
                         </p>
                     </div>
 
-                    <div class="battle__pc-selection">
-                            <img src="./img/game-rps/scissors.png" alt="컴퓨터 선택: 가위" class="battle__pc-selection--image" id="pc-image" />
+                    <div class="game__pc-selection">
+                            <img src="./img/game-rps/scissors.png" alt="컴퓨터 선택: 가위" class="game__pc-selection--image" id="pc-image" />
                     </div>
 
-                    <div class="battle__button-wrapper">
+                    <div class="game__button-wrapper">
                         <button type="button" class="white-button" id="scissors-button">
                             가위
                         </button>
