--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
 
         <main id="game" aria-label="게임 목록">
-            <article class="game__wrapper rock-paper-scissors">
+            <article class="game__wrapper" id="rock-paper-scissors">
                 <a class="game__overlay" href="./game-rps.html" aria-label="가위 바위 보 게임: 컴퓨터와 가위 바위 보 대결을 해보세요."></a>
                 <figure class="game__image"></figure>
                 <h1 class="game__title">
@@ -31,7 +31,7 @@
                 </p>
             </article>
 
-            <article class="game__wrapper find-different-color" aria-hidden="true">
+            <article class="game__wrapper" id="find-different-color" aria-hidden="true">
                 <a class="game__overlay" href="./game-fdc.html"></a>
                 <figure class="game__image"></figure>
                 <h1 class="game__title" lang="en">
