:lipstick: 남은 시간, 스테이지 메뉴 위치 변경

--- a/game-fdc.html
+++ b/game-fdc.html
@@ -18,11 +18,11 @@
         <div class="board">
             <header class="menu">
                 <nav class="menu__nav">
-                    <div class="menu-show-state menu__nav-stage">
-                        <strong id="player-stage">3</strong>
-                    </div>
-                    <div class="menu-show-state menu__nav-time">
+                    <div class="menu-state menu__nav-time">
                         <strong id="player-time">3</strong>
+                    </div>
+                    <div class="menu-state menu__nav-stage">
+                        <strong id="player-stage">3</strong>
                     </div>
                     <div class="menu__nav-stop">
                         <button type="button" class="menu__nav-stop--button" id="stop-button">
@@ -39,10 +39,6 @@
 
             <main class="game">
                 <div class="palette">
-                    <div class="palette-item hit"></div>
-                    <div class="palette-item miss"></div>
-                    <div class="palette-item miss"></div>
-                    <div class="palette-item miss"></div>
                 </div>
             </main>
         </div>
