:adhesive_bandage: 가위 바위 보 페이지 모달 콘텐츠 관련 class명 변경

--- a/game-rps.html
+++ b/game-rps.html
@@ -72,7 +72,7 @@
                 <div class="modal__content-title">
                 </div>
         
-                <p class="modal__content-close">
+                <p class="modal__content-guide">
                     <span id="time-remain"></span>초 뒤 자동으로 닫힙니다.
                 </p>
         
