:lipstick: 다른 색깔 찾기 게임 결과 출력을 위한 모달 추가

--- a/game-fdc.html
+++ b/game-fdc.html
@@ -19,10 +19,10 @@
             <header class="menu">
                 <nav class="menu__nav">
                     <div class="menu-state menu__nav-time">
-                        <strong id="player-time">3</strong>
+                        <strong id="player-time"></strong>
                     </div>
                     <div class="menu-state menu__nav-stage">
-                        <strong id="player-stage">3</strong>
+                        <strong id="player-stage"></strong>
                     </div>
                     <div class="menu__nav-stop">
                         <button type="button" class="menu__nav-stop--button" id="stop-button">
@@ -41,6 +41,17 @@
                 <div class="palette">
                 </div>
             </main>
+        </div>
+    </div>
+
+    <div class="modal modal-layer">
+        <div class="modal__content">
+            <div class="modal__content-title">
+            </div>
+    
+            <button class="white-button modal__content-close-button" type="button">
+                닫기
+            </button>
         </div>
     </div>
 
