:adhesive_bandage: 사용하지 않는 css 코드 삭제 및 모달 관련 요소 클래스명 변경

--- a/game-fdc.html
+++ b/game-fdc.html
@@ -18,11 +18,11 @@
         <div class="board">
             <header class="menu">
                 <nav class="menu__nav">
-                    <div class="menu-state menu__nav-time">
+                    <div class="menu__nav-time">
                         <strong id="player-time"></strong>
                     </div>
-                    <div class="menu-state menu__nav-stage">
-                        <strong id="player-stage"></strong>
+                    <div class="menu__nav-stage">
+                        STAGE<strong id="player-stage"></strong>
                     </div>
                     <div class="menu__nav-stop">
                         <button type="button" class="menu__nav-stop--button" id="stop-button">
