:adhesive_bandage: 게임 별 홈 버튼 클릭 시 해당 게임이 있던 위치로 이동하도록 수정

--- a/game-cm.html
+++ b/game-cm.html
@@ -19,13 +19,13 @@
             <header class="menu">
                 <nav class="menu__nav">
                     <div class="menu__nav-time">
-                        <strong id="player-time">60</strong>
+                        <strong id="player-time"></strong>
                     </div>
                     <div class="menu__nav-stage">
-                        STAGE<strong id="player-stage">1</strong>
+                        STAGE<strong id="player-stage"></strong>
                     </div>
                     <div class="menu__nav-home">
-                        <a href="./index.html#game" class="menu__nav-home--button" id="home-button">
+                        <a href="./index.html#card-matching" class="menu__nav-home--button" id="home-button">
                             <span class="sr-only">메인 페이지로 이동</span>
                         </a>
                     </div>
@@ -36,6 +36,20 @@
                 <div class="game__board">
                 </div>
             </main>
+
+            <div class="stage-clear"></div>
+            <div class="game-over"></div>
+        </div>
+
+        <div class="modal modal-layer">
+            <div class="modal__content">
+                <div class="modal__content-title">
+                </div>
+        
+                <button class="white-button modal__content-close-button" type="button">
+                    닫기
+                </button>
+            </div>
         </div>
     </div>
 
