--- a/game-fdc.html
+++ b/game-fdc.html
@@ -25,7 +25,7 @@
                         STAGE<strong id="player-stage"></strong>
                     </div>
                     <div class="menu__nav-home">
-                        <a href="./index.html#game" class="menu__nav-home--button" id="home-button">
+                        <a href="./index.html#find-different-color" class="menu__nav-home--button" id="home-button">
                             <span class="sr-only">메인 페이지로 이동</span>
                         </a>
                     </div>
