--- a/game-rps.html
+++ b/game-rps.html
@@ -27,7 +27,7 @@
                         </button>
                     </div>
                     <div class="menu__nav-home">
-                        <a href="./index.html#game" class="menu__nav-home--button" id="home-button">
+                        <a href="./index.html#rock-paper-scissors" class="menu__nav-home--button" id="home-button">
                             <span class="sr-only">메인 페이지로 이동</span>
                         </a>
                     </div>
