:adhesive_bandage: 화면 초기화 하는 부분을 initScreen 함수로 구성

--- a/game-cm.html
+++ b/game-cm.html
@@ -19,7 +19,7 @@
             <header class="menu">
                 <nav class="menu__nav">
                     <div class="menu__nav-time">
-                        <strong id="player-time"></strong>
+                        <strong id="player-time" class="blink"></strong>
                     </div>
                     <div class="menu__nav-stage">
                         STAGE<strong id="player-stage"></strong>
