:adhesive_bandage: 다른 색깔 찾기 aria-label 오타 수정

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </article>
 
             <article class="game__wrapper" id="find-different-color" aria-hidden="true">
-                <a class="game__overlay" href="./game-fdc.html" aria-label="다른 색깔 찾기 게임: 여러 개의 색 중 다른 하나 색 찾아보세요."></a>
+                <a class="game__overlay" href="./game-fdc.html" aria-label="다른 색깔 찾기 게임: 여러 개의 색 중 다른 색 하나를 찾아보세요."></a>
                 <figure class="game__image"></figure>
                 <h1 class="game__title" lang="en">
                     다른 색깔 찾기
