--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
                     카드를 뒤집어 같은 그림을 맞춰보세요.<br/>
                 </p>
             </article>
+
+            <article class="game__wrapper" id="memory-test" aria-hidden="true">
+                <a class="game__overlay" href="./game-mt.html" aria-label="메모리 게임: 컴퓨터의 선택을 기억해보세요."></a>
+                <figure class="game__image"></figure>
+                <h1 class="game__title" lang="en">
+                    기억력 테스트
+                </h1>
+                <p class="game__desc" lang="en">
+                    깜빡이는 블록을 기억해서 맞춰보세요.<br/>
+                </p>
+            </article>
         </main>
     </div>
 
