:adhesive_bandage: aria-label 추가

--- a/game-fdc.html
+++ b/game-fdc.html
@@ -19,10 +19,10 @@
             <header class="menu">
                 <nav class="menu__nav">
                     <div class="menu__nav-time">
-                        <strong id="player-time"></strong>
+                        <strong id="player-time" aria-label="남은 시간"></strong>
                     </div>
                     <div class="menu__nav-stage">
-                        STAGE<strong id="player-stage"></strong>
+                        STAGE<strong id="player-stage" aria-label="스테이지"></strong>
                     </div>
                     <div class="menu__nav-home">
                         <a href="./index.html#find-different-color" class="menu__nav-home--button" id="home-button">
