--- a/game-rps.html
+++ b/game-rps.html
@@ -19,7 +19,7 @@
             <header class="menu">
                 <nav class="menu__nav">
                     <div class="menu-show-state menu__nav-life">
-                        <strong id="player-life"></strong>
+                        <strong id="player-life" aria="기회"></strong>
                     </div>
                     <div class="menu__nav-stop">
                         <button type="button" class="menu__nav-stop--button" id="stop-button">
