--- a/game-cm.html
+++ b/game-cm.html
@@ -19,10 +19,10 @@
             <header class="menu">
                 <nav class="menu__nav">
                     <div class="menu__nav-time">
-                        <strong id="player-time" class="blink"></strong>
+                        <strong id="player-time" class="blink" aria-label="남은 시간"></strong>
                     </div>
                     <div class="menu__nav-stage">
-                        STAGE<strong id="player-stage"></strong>
+                        STAGE<strong id="player-stage" aria-label="스테이지"></strong>
                     </div>
                     <div class="menu__nav-home">
                         <a href="./index.html#card-matching" class="menu__nav-home--button" id="home-button">
