--- a/game-mt.html
+++ b/game-mt.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game World : 메모리 게임</title>
-    <meta name="description" content="Vanilla JS를 이용한 Mini Game Project - 메모리 게임">
+    <title>Game World : 기억력 테스트</title>
+    <meta name="description" content="Vanilla JS를 이용한 Mini Game Project - 기억력 테스트">
     <link rel="icon" type="image/x-ico" href="./resources/favicon/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
