--- a/game-mt.html
+++ b/game-mt.html
@@ -33,7 +33,7 @@
             </header>
 
             <main class="game">
-                <div class="game__board">
+                <div class="item-wrapper">
                     <div class="item" data-id="0"></div>
                     <div class="item" data-id="1"></div>
                     <div class="item" data-id="2"></div>
