--- a/index.html
+++ b/index.html
@@ -54,13 +54,24 @@
             </article>
 
             <article class="game__wrapper" id="memory-test" aria-hidden="true">
-                <a class="game__overlay" href="./game-mt.html" aria-label="기억력 테스트: 깜빡이는 블록을 기억해서 맞춰보세요."></a>
+                <a class="game__overlay" href="./game-mt.html" aria-label="기억력 테스트: 컴퓨터의 블록 선택 순서를 기억해서 똑같이 맞춰보세요."></a>
                 <figure class="game__image"></figure>
                 <h1 class="game__title" lang="en">
                     기억력 테스트
                 </h1>
                 <p class="game__desc" lang="en">
                     깜빡이는 블록을 기억해서 맞춰보세요.<br/>
+                </p>
+            </article>
+
+            <article class="game__wrapper" id="bulls-and-cows" aria-hidden="true">
+                <a class="game__overlay" href="./game-bac.html" aria-label="숫자 야구: 숫자 야구 게임을 즐겨보세요!"></a>
+                <figure class="game__image"></figure>
+                <h1 class="game__title" lang="en">
+                    숫자 야구
+                </h1>
+                <p class="game__desc" lang="en">
+                    숫자 야구 게임을 즐겨보세요!<br/>
                 </p>
             </article>
         </main>
