--- a/game-rps.html
+++ b/game-rps.html
@@ -18,13 +18,13 @@
         <div class="board">
             <header class="menu">
                 <nav class="menu__nav">
-                    <div class="menu-show-state menu__nav-life">
+                    <div class="menu__nav-life">
                         <strong id="player-life" aria="기회"></strong>
                     </div>
                     <div class="menu__nav-stop">
-                        <button type="button" class="menu__nav-stop--button" id="stop-button">
+                        <div class="menu__nav-stop--button" id="stop-button">
                             <span class="sr-only">게임 종료</span>
-                        </button>
+                        </div>
                     </div>
                     <div class="menu__nav-home">
                         <a href="./index.html#rock-paper-scissors" class="menu__nav-home--button" id="home-button">
