:adhesive_bandage: 숫자 야구 페이지 form 요소 클래스명 수정 및 기타 문구 수정

--- a/game-bac.html
+++ b/game-bac.html
@@ -45,10 +45,10 @@
                                     <th scope="col">
                                         <span class="sr-only">회차</span>
                                     </th>
-                                    <th scope="col" colspan="2">RECORD</th>
+                                    <th scope="col" colspan="2">SCORE BOARD</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="record-list">
                                 <tr>
                                     <th scope="row">1회</th>
                                     <td></td>
@@ -100,12 +100,12 @@
                     <div class="ground__bat">
                         <form action="#" method="get" id="bat-form" class="ground__bat--form">
                             <div class="form__input-wrapper">
-                                <input type="text" id="first-num" class="form__input" maxlength="1" inputmode="numeric" />
-                                <input type="text" id="second-num" class="form__input" maxlength="1" inputmode="numeric" />
-                                <input type="text" id="third-num" class="form__input" maxlength="1" inputmode="numeric" />
-                                <input type="text" id="fourth-num" class="form__input" maxlength="1" inputmode="numeric" />
+                                <input type="text" class="form__input" maxlength="1" inputmode="numeric" autofocus />
+                                <input type="text" class="form__input" maxlength="1" inputmode="numeric" />
+                                <input type="text" class="form__input" maxlength="1" inputmode="numeric" />
+                                <input type="text" class="form__input" maxlength="1" inputmode="numeric" />
                             </div>
-                            <button type="button" class="white-button form__button">
+                            <button type="button" class="white-button form__button" id="bat-form-button">
                                 확인
                             </button>
                         </form>
@@ -121,18 +121,24 @@
                 </div>
 
                 <div class="modal__content-desc">
-                    <h2 class="modal__content-desc--main">감춰진 4자리의 숫자를 맞춰보세요!</h2>
+                    <h2 class="modal__content-desc--main">감춰진 4자리 숫자를 맞춰보세요!</h2>
                     <ul class="modal__content-desc--list">
                         <li class="test">
                             9회 안에 감춰진 4자리 숫자와 정확한 위치를 모두 맞춰야 성공!
                         <li>
-                            숫자는 0~9까지의 범위로 되어 있으며, 각 숫자는 한 번씩만 사용 가능합니다.
+                            숫자는 0~9까지의 범위로 되어 있으며, 첫 번째 숫자가 0일 수도 있습니다.
+                        </li>
+                        <li>
+                            각 숫자는 한 번씩만 사용 가능합니다.
                         </li>
                         <li>
                             숫자와 자리의 위치가 맞으면 스트라이크, 숫자만 맞으면 볼
                         </li>
                         <li>
                             숫자가 하나도 맞지 않는 경우 아웃
+                        </li>
+                        <li>
+                            게임 재시작을 원할 때는 홈 버튼 왼쪽의 재시작 버튼을 눌러주세요.
                         </li>
                     </ul>
                 </div>
@@ -142,6 +148,8 @@
                 </button>
             </div>
         </div>
+
+        <div class="game-result"></div>
     </div>
 
     <script src="./js/game-bac.js"></script>
