:adhesive_bandage: 숫자 야구 게임 규칙 문구 수정

--- a/game-bac.html
+++ b/game-bac.html
@@ -132,10 +132,10 @@
                             각 숫자는 한 번씩만 사용 가능합니다.
                         </li>
                         <li>
-                            숫자와 자리의 위치가 맞으면 스트라이크, 숫자만 맞으면 볼
+                            숫자와 위치가 맞으면 스트라이크, 숫자만 맞으면 볼
                         </li>
                         <li>
-                            숫자가 하나도 맞지 않는 경우 아웃
+                            숫자가 하나도 맞지 않은 경우 아웃
                         </li>
                         <li>
                             게임 재시작을 원할 때는 홈 버튼 왼쪽의 재시작 버튼을 눌러주세요.
