--- a/game-bac.html
+++ b/game-bac.html
@@ -124,18 +124,18 @@
                     <h2 class="modal__content-desc--main">감춰진 4자리 숫자를 맞춰보세요!</h2>
                     <ul class="modal__content-desc--list">
                         <li class="test">
-                            9회 안에 감춰진 4자리 숫자와 정확한 위치를 모두 맞춰야 성공!
+                            감춰진 4자리 숫자와 정확한 위치를 9회 안에 모두 맞춰야 성공!
                         <li>
                             숫자는 0~9까지의 범위로 되어 있으며, 첫 번째 숫자가 0일 수도 있습니다.
                         </li>
                         <li>
-                            각 숫자는 한 번씩만 사용 가능합니다.
+                            각 숫자는 한 번씩만 사용할 수 있습니다.
                         </li>
                         <li>
                             숫자와 위치가 맞으면 스트라이크, 숫자만 맞으면 볼
                         </li>
                         <li>
-                            숫자가 하나도 맞지 않은 경우 아웃
+                            숫자가 하나도 맞지 않으면 아웃
                         </li>
                         <li>
                             게임 재시작을 원할 때는 홈 버튼 왼쪽의 재시작 버튼을 눌러주세요.
